--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   
+  # HTTP client for REST API calls
+  http: ^1.2.2
+  
   # Google Sign-In
   google_sign_in: ^6.2.1
   
@@ -68,8 +71,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/logo.svg
-    - assets/topbanner.svg
+    - assets/newlogo.svg
+    - assets/card back.svg
+    - assets/card front.svg
+    - assets/chooselanguage.svg
+    - assets/verifynumber.svg
+    - assets/setpassword.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
